--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@chakra-ui/react": "^3.2.3",
     "@emotion/react": "^11.14.0",
+    "@tanstack/react-query": "^5.62.14",
     "next-themes": "^0.4.4",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
